# pokepi

./: .earthignore  .gitignore  Earthfile  README.md  pyproject.toml
src/pokepi/: app.py
src/pokepi/providers/: __init__.py  common.py  pokeapi.py  shakespeare.py
tests/: test_app.py
tests/providers/: conftest.py  test_common.py  test_pokeapi.py  test_shakespeare.py
tests/providers/test_pokeapi/: ditto-empty-descriptions.json  ditto.json  validated_ditto.json
